Closed Bug 1217339 Opened 10 years ago Closed 10 years ago

Fix illegal format of folder-listing object

Categories

(Firefox OS Graveyard :: Bluetooth, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(feature-b2g:2.2r+, firefox44 fixed, b2g-v2.2r fixed)

RESOLVED FIXED
FxOS-S10 (30Oct)
feature-b2g 2.2r+
Tracking Status
firefox44 --- fixed
b2g-v2.2r --- fixed

People

(Reporter: shawnjohnjr, Assigned: shawnjohnjr)

References

Details

Attachments

(3 files, 1 obsolete file)

Fix illegal format of folder-listing object
Assignee: nobody → shuang
Followed the specification, I did not add "/" for <folder> tag. 9.1 The Folder Listing Object <folder-listing> <folder name = ”System” created = ”19961103T141500Z”/> </folder-listing>
Attached image test results
Now test app can show UI correctly.
blocking-b2g: --- → 2.2r?
Flags: needinfo?(whuang)
Comment on attachment 8677369 [details] [diff] [review] bug1217339-mc.patch Review of attachment 8677369 [details] [diff] [review]: ----------------------------------------------------------------- LGTM.
Attachment #8677369 - Flags: review?(btian) → review+
Attachment #8678140 - Attachment description: Bug 1217339 - Fix illegal format of folder-listing object, r=btian → Bug 1217339 - Fix illegal format of folder-listing object, r=btian (v2.2r)
blocking-b2g: 2.2r? → ---
feature-b2g: --- → 2.2r+
Flags: needinfo?(whuang)
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → FxOS-S10 (30Oct)
Please help to uplfit to v2.2r branch.
Flags: needinfo?(cbook)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: