Bug 1217339 - Fix illegal format of folder-listing object, r=btian, a=2.2r+